assets/css/style.css
/* Google Fonts */

@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap');

/* Global */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    font-family: 'Open Sans', 'PT Sans';
}

body , html {
    overflow-x: hidden;
}

a {
    text-decoration: none;
}

ul {
    list-style: none;
}

/* Navbar */

.navbar {
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    width: 100%;
    justify-content: space-between;
    padding: 20px;
    color: #242424;

}

.nav-links {
    display: flex;
    align-items: center;
}

.nav-links li {
    margin: 0 30px;

}

.navbar a {
    color: whitesmoke;
}

.navbar a:hover {
    color: #fc036b;
    text-decoration: underline;
    font-weight: bold;
}

.logo {
    color: whitesmoke;
}

/* Header */

header {
    background-image: url(../images/lift.jpg);
    width: 100vw;
    height: 100vh;
    background-position: bottom;
    background-size: cover;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}

.header-content {
    margin-bottom: 15px;
    color: whitesmoke;
    text-align: center;
    padding-bottom: 200px;
}

.header-content h1 {
    font-size: 4vmin;
    text-transform: uppercase;
}

.line {
    width: 150px;
    height: 4px;
    background-color: #fc036b;
    margin: 10px auto;
    border-radius: 5px;
}

.header-content h2 {
    font-size: 7vmin;
    margin-top: 50px;
    margin-bottom: 30px;
}

.header-content p {
    font-style: italic;
    margin-bottom: 10px;
} 

.ctn {
    padding: 8px 15px;
    background: #fc036b;
    border-radius: 30px;
    color: whitesmoke;
}

.menu-btn {
    position: absolute;
    top: 30px;
    right: 30px;
    width: 40px;
    cursor: pointer;
    color: whitesmoke;
    display: none;
}

/* Featured Articles */

section {
    width: 80%;
    margin: 80px auto;
}

.title  {
    text-align: center;
    font-size: 4vmin;
}

.row    {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: space-between;
}

.row .col   {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.featured-articles .row {
    margin-top: 50px;
}

img {
    padding-bottom: 10px;
}

h4  {
    font-size: 3vmin;
    margin: 20px auto;
}

p   {
    padding: 10px 40px;
    max-width: 550px;
}

.featured-articles .ctn {
    margin-top: 30px;
}

.explore {
    width: 100%;
    height: 100vh;
    background-image: url(../images/ropes.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    align-items: center;
}

.explore-content {
    width: 60%;
    padding: 50px;
    color: whitesmoke;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.explore-content h1 {
    font-size: 5vmin;
    margin: 50px;
    text-transform: uppercase;
}

.explore-content .line {
    margin-bottom: 50px;
}

.explore-content p {
    color: whitesmoke;
}

.explore-content .ctn {
    margin-top: 40px;
}

.back-to-top {
    padding: 50px;
    color: whitesmoke;
    display: flex;
    align-items: center;
    flex-direction: column;
}

/* Footer */
.footer {
    width: 100%;
    height: 200px;
    padding: 20px 80px;
    margin: 0;
    text-align: center;
}

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
    padding: 3% 5%;
}

.social-networks i {
    font-size: 180%;
    color: #3a3a3a;
}

/* Contact Form */

.contact-bg {
    background-image: url(../images/gym.JPG);
    width: 100vw;
    height: 100vh;
    background-position: bottom;
    background-size: cover;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}

.contact-form {
    width: 85%;
    max-width: 600px;
    background: rgba(226, 226, 226, 0.89);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 30px 40px;
    box-sizing: border-box;
    border-radius: 8px;
    text-align: center;
    box-shadow: 0 0 20px #000000b3;
}

.contact-form h1 {
    margin-top: 0;
    font-weight: 200;
}

.textb {
    border: 1px solid gray;
    margin: 8px 0;
    padding: 12px 18px;
    border-radius: 8px;
}

.textb label {
    display: block;
    text-align: left;
    color: #333;
    text-transform: uppercase;
    font-size: 14px;
}

.textb input, .textb textarea {
    width: 100%;
    border: none;
    background: none;
    outline: none;
    font-size: 18px;
    margin-top: 6px;
}

.contact-btn {
    display: inline-block;
    background: #fc036b;
    padding: 14px 0;
    color: whitesmoke;
    font-weight: bold;
    text-transform: uppercase;
    cursor: pointer;
    margin-top: 8px;
    width: 100%;
}

/* Mobile Device */
@media only screen and (max-width:850px) {
    .menu-btn {
        display: block;
    }
    
    .navbar {
        padding: 0;
    }
    .logo {
        position: absolute;
        top: 30px;
        left: 30px;
    }
    .nav-links {
        flex-direction: column;
        width: 100%;
        height: 100vh;
        justify-content: center;
        background: rgba(185, 185, 185, 0.863);
        margin-top: -1400px;
        transition: all 0.5s ease;
    }

    .mobile-menu {
        margin-top: 0px;
        border-bottom-right-radius: 30%;
    }

    .nav-links li {
        margin: 30px auto;
    }
}

/* Articles */
.row {
    flex-direction: column;
}

.row .col {
    margin: 20px auto;
}

.col img {
    max-width: 90%;
}

/* Explore */
.explore-content {
    width: 100%;
}

/* footer */
.footer {
    padding: 10px;
}

/* Animations */
img {
    transition: transform .3s ease;
}
img:hover {
    transform: scale(1.01);
}
.ctn:hover {
    background: whitesmoke;
    color: #fc036b;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.308);
}

.menu-btn {
    transition: transform .3s ease;
}
.menu-btn:hover {
    transform: scale(1.1);
}

